Реализовал свою модель данных - студенты

--- a/Anisimov/Views/Home/EmployeeDetails.cshtml
+++ b/Anisimov/Views/Home/EmployeeDetails.cshtml
@@ -47,4 +47,5 @@
             @Html.DisplayFor(model => model.Position)
         </dd>
     </dl>
+    @Html.ActionLink("Back", "Employees")
 </div>
