--- a/Anisimov/Views/Home/Index.cshtml
+++ b/Anisimov/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     <title>Index</title>
 </head>
 <body>
-    <p>Привет из представления!</p>
+    @Html.ActionLink("Employees", "Employees")
+    @Html.ActionLink("Students", "Students")
 </body>
 </html>
