--- a/Anisimov/Views/Shared/_Header.cshtml
+++ b/Anisimov/Views/Shared/_Header.cshtml
@@ -91,7 +91,7 @@
                         <ul class="nav navbar-nav collapse navbar-collapse">
                             <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
                             <li class="dropdown">
-                                <a href="#">Shop<i class="fa fa-angle-down"></i></a>
+                                <a asp-controller="Home" asp-action="Shop">Shop<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
                                     <li><a asp-controller="Home" asp-action="Shop">Products</a></li>
                                     <li><a asp-controller="Home" asp-action="ProductDetails">Product Details</a></li>
@@ -101,7 +101,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Blog<i class="fa fa-angle-down"></i></a>
+                                <a asp-controller="Home" asp-action="Blog">Blog<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
                                     <li><a asp-controller="Home" asp-action="Blog">Blog List</a></li>
                                     <li><a asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
