--- a/Anisimov/Views/Shared/_Header.cshtml
+++ b/Anisimov/Views/Shared/_Header.cshtml
@@ -109,6 +109,7 @@
                             </li>
                             <li><a asp-controller="Home" asp-action="Error">404</a></li>
                             <li><a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
+                            <li><a asp-controller="Employee" asp-action="Employees">Employees</a></li>
                         </ul>
                     </div>
                 </div>
