--- a/Anisimov/Views/Employee/Employees.cshtml
+++ b/Anisimov/Views/Employee/Employees.cshtml
@@ -13,7 +13,7 @@
             <td>
                 @Html.ActionLink("Детали", "EmployeeDetails", new { id = item.Id })
             </td>
-            <td><a asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-cut"></i></a></td>
+            <td><a asp-action="Delete" asp-route-id="@item.Id"><i class="btn btn-danger">Удалить</i></a></td>
         </tr>
 }
 </table>
