--- a/Anisimov/Views/Home/Index.cshtml
+++ b/Anisimov/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-                @await Html.PartialAsync("_Partial/_FeaturesItems")
+                @*@await Html.PartialAsync("_Partial/_FeaturedItems")*@
 
                 @await Html.PartialAsync("_Partial/_CategoryTab")
 
